add: seguу and maketed the MVC

--- a/Swoosh/Swoosh/Base.lproj/Main.storyboard
+++ b/Swoosh/Swoosh/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--WelcomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="WelcomeVC" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -40,6 +40,9 @@
                                 <state key="normal" title="GET STARTED">
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <segue destination="Ktb-cS-2mK" kind="show" id="By5-6d-tIU"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ON GOING ALL OUT" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wam-4F-hnp">
                                 <rect key="frame" x="72" y="208" width="270" height="36"/>
@@ -86,12 +89,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="133.33333333333334" y="131.25"/>
+            <point key="canvasLocation" x="-100" y="129"/>
         </scene>
-        <!--View Controller-->
+        <!--LeagueVC-->
         <scene sceneID="OzF-fw-Ldo">
             <objects>
-                <viewController id="Ktb-cS-2mK" sceneMemberID="viewController">
+                <viewController id="Ktb-cS-2mK" customClass="LeagueVC" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aDc-uw-iDW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -127,7 +130,7 @@
                                             <constraint firstAttribute="height" constant="50" id="C5I-CK-QCn"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="21"/>
-                                        <state key="normal" title="Mens">
+                                        <state key="normal" title="Men">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
@@ -138,7 +141,7 @@
                                             <constraint firstAttribute="height" constant="50" id="odh-eT-J9k"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="Avenir-Heavy" family="Avenir" pointSize="21"/>
-                                        <state key="normal" title="Womens">
+                                        <state key="normal" title="Women">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                     </button>
@@ -167,13 +170,26 @@
                                     <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F1n-mZ-OfG">
+                                <rect key="frame" x="20" y="30" width="29" height="24"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="dmL-Bu-EUX"/>
+                                    <constraint firstAttribute="width" constant="29" id="sIe-lR-XT7"/>
+                                </constraints>
+                                <state key="normal" image="backButton"/>
+                                <connections>
+                                    <segue destination="gNT-ap-blD" kind="unwind" unwindAction="unwindFromSkillVCWithUnwindSegue:" id="51K-0q-auv"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="rm4-QS-9Qv" firstAttribute="trailing" secondItem="23W-ic-ZiD" secondAttribute="trailing" id="24e-ff-B3A"/>
                             <constraint firstItem="23W-ic-ZiD" firstAttribute="trailing" secondItem="vGq-0z-ofg" secondAttribute="trailing" id="99W-Pb-erm"/>
+                            <constraint firstItem="F1n-mZ-OfG" firstAttribute="leading" secondItem="23W-ic-ZiD" secondAttribute="leading" constant="20" id="DyQ-Ri-n8x"/>
                             <constraint firstItem="2FK-b2-nNu" firstAttribute="top" secondItem="vGq-0z-ofg" secondAttribute="bottom" constant="25" id="Ldc-2R-mVS"/>
                             <constraint firstItem="rm4-QS-9Qv" firstAttribute="leading" secondItem="23W-ic-ZiD" secondAttribute="leading" id="Ncz-rD-66e"/>
+                            <constraint firstItem="F1n-mZ-OfG" firstAttribute="top" secondItem="23W-ic-ZiD" secondAttribute="top" constant="10" id="NdY-cg-CrI"/>
                             <constraint firstItem="23W-ic-ZiD" firstAttribute="trailing" secondItem="2FK-b2-nNu" secondAttribute="trailing" constant="20" id="OJz-0I-lsS"/>
                             <constraint firstItem="23W-ic-ZiD" firstAttribute="bottom" secondItem="PCX-ek-ruv" secondAttribute="bottom" constant="20" id="Q3C-El-q5G"/>
                             <constraint firstItem="rm4-QS-9Qv" firstAttribute="bottom" secondItem="23W-ic-ZiD" secondAttribute="bottom" id="RsI-ev-9Xs"/>
@@ -189,13 +205,14 @@
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VUr-vZ-37u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="gNT-ap-blD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="780" y="129.08545727136433"/>
         </scene>
-        <!--View Controller-->
+        <!--SkillVC-->
         <scene sceneID="2oY-Dt-fue">
             <objects>
-                <viewController id="FTZ-5d-uP7" sceneMemberID="viewController">
+                <viewController id="FTZ-5d-uP7" customClass="SkillVC" customModule="Swoosh" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="B7h-E2-ETc">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -282,10 +299,11 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JdW-nb-s8e" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1436" y="130.88455772113943"/>
+            <point key="canvasLocation" x="1651" y="129"/>
         </scene>
     </scenes>
     <resources>
+        <image name="backButton" width="29" height="24"/>
         <image name="beginnerBallerBG" width="414" height="736"/>
         <image name="desiredLeagueBG" width="414" height="736"/>
         <image name="swooshLogo" width="119" height="20"/>
